--- a/css/style.css
+++ b/css/style.css
@@ -21,32 +21,54 @@ ul {
   margin: 0;
     
 }
+
 h1,h2,h3,p{
     margin: 0 ;
 }
+
 .link {
     text-decoration: none;
     margin: 0;
     padding: 0;
     
 }
+
 img {
     display: block;
     max-width: 100%;
     height: auto;
 
 }
+
 .list {
       list-style: none;
     margin: 0;
     padding: 0;
 
 }
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+/*HEADER*/
+
 header {
   border-bottom: 1px solid #ECECEC;
 }
 
-.header-container{
+.header__container{
  
     display: flex;
     width: 1600px;
@@ -54,9 +76,47 @@ header {
 
 
 }
-.header-icon{
+
+.header__icon{
   fill: currentColor;
 }
+
+.header__contacts {
+  display: flex;
+  gap: 50px;
+  margin-left: auto;
+
+}
+
+.header__tel,
+.header__mail {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+
+  transition: color var(--anim-fast);
+}
+
+.header__tel,
+.header__mail {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.header__mail:focus,
+.header__mail:hover {
+  color: var(--accent-color);
+}
+
+.header__tel:focus,
+.header__tel:hover {
+  color: var(--accent-color);
+}
+
 .logo {
   color: #2196f3;
   font-family: Raleway, sans-serif;
@@ -67,13 +127,16 @@ header {
   text-decoration: none;
 
 }
+
 .logo-header {
   color: #000000;
 }
+
 .logo-footer {
   color: #ffffff;
 }
-.site-nav .link {
+
+.nav__list .link {
   position: relative;
   display: block;
   padding-top: 32px;
@@ -88,21 +151,23 @@ header {
   transition: color var(--anim-fast);
 }
 
-.site-nav .link:focus,
-.site-nav .link:hover {
+.nav__list .link:focus,
+.nav__list .link:hover {
   color: var(--accent-color);
 }
-.site-nav .link.current {
+
+.nav__list .link.current {
   color: var(--accent-color);
 }
-.site-nav{
+
+.nav__list{
     display: flex;
     margin-left: 93px;
     gap: 50px;
 
 }
- 
-.header-nav-link::after {
+
+.nav__link::after {
   content: "";
   position: absolute;
   left: 50%;
@@ -117,12 +182,13 @@ header {
   transition: transform var(--anim-fast), opacity var(--anim-fast);
 }
 
-.header-nav-link:hover::after,
-.header-nav-link:focus::after{
+.nav__link:hover::after,
+.nav__link:focus::after{
   transform: translateX(-50%) scale(1);
   opacity: 1;
   
 }
+
 .current::after {
   content: "";
     position: absolute;
@@ -136,12 +202,55 @@ header {
     opacity: 1;
 }
 
-.solution-container{
+/* HERO */
+
+.hero {
+  background-color: #2f303a;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(to right,
+      rgba(0, 0, 0, 0.25),
+      rgba(0, 0, 0, 0.25)),
+    url(../images/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  text-align: center;
+}
+
+.hero__container {
+
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 696px;
+
+}
+
+.hero__title {
+  margin-bottom: 30px;
+  font-weight: 900;
+  color: var(--main-title-color);
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+}
+
+/* SOLUTION*/
+
+
+.solution__container{
     display: flex;
   gap: 30px;  
 }
 
-.solution-item::before {
+.solution__item::before {
   display: block;
   content: "";
   height: 120px;
@@ -151,6 +260,23 @@ header {
     border-radius: 4px;
     margin-bottom: 30px;
 }
+
+.solution__list {
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+}
+
+.solution__text {
+  width: 270px;
+  color: var(--secondary-text-color);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
 .icon-antena::before{
   background-image: url(../images/antenna.svg);
 }
@@ -166,23 +292,184 @@ header {
   background-image: url(../images/astronaut.svg) ;
 }
 
-.contacts{
-    display: flex;
-    gap: 50px;
-    margin-left: auto;
-  
+/*WORK*/
+
+.work__list {
+  display: flex;
+  gap: 30px;
+
 }
-.tel-header,
-.mail-header {
-  color: var(--secondary-text-color);
-  font-weight: 500;
+
+.work__thumb {
+  position: relative;
+  overflow: hidden;
+
+}
+
+.work__overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  padding-left: 0;
+  padding-right: 0;
+  width: 100%;
+  height: 70px;
+
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+
+  background-color: rgba(47, 48, 58, 0.8);
+  user-select: none;
+
+
+}
+
+.work__overlay__text {
+
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 
-  transition: color var(--anim-fast);
+
 }
+
+.work__title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.work__section {
+  padding-top: 0;
+}
+
+.work__section {
+  padding-top: 0;
+}
+
+/* TEAM */
+
+.team__section {
+  background-color: #f5f4fa;
+
+}
+
+.team__title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.team__container {
+  display: flex;
+  gap: 30px;
+
+}
+
+.team__card {
+  background-color: var(--main-title-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+
+}
+
+.teammate__name {
+    margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--main-text-color);
+}
+
+.teammate__profession {
+  padding-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
+
+.teammate__card {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.socials-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  fill: #AFB1B8;
+
+  transition: fill var(--anim-fast), background-color var(--anim-fast);
+}
+
+.socials-link:hover,
+.socials-link:focus {
+  fill: #ffffff;
+  background-color: #2196f3;
+
+}
+
+
+/* CLIENTS */
+
+.clients {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  gap: 30px;
+
+}
+
+.client__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  background-color: #ffffff;
+  fill: #AFB1B8;
+  transition: fill var(--anim-fast), border-color var(--anim-fast);
+}
+
+.client__link:hover,
+.client__link:focus {
+  fill: #2196f3;
+  border-color: #2196f3;
+}
+
+
+
+
+
 .tel-footer,
 .mail-footer {
   color: rgba(255, 255, 255, 0.6);
@@ -214,58 +501,8 @@ header {
 .tel-footer:hover {
   color: var(--accent-color);
 }
-.mail-header:focus,
-.mail-header:hover {
-  color: var(--accent-color);
-}
-
-.tel-header:focus,
-.tel-header:hover {
-  color: var(--accent-color);
-}
-.tel-header,
-.mail-header{
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.hero{
-  background-color: #2f303a;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
-  height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient(to right,
-        rgba(0, 0, 0, 0.25),
-        rgba(0, 0, 0, 0.25)),
-  url(../images/hero.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-
-  text-align: center;
-}
 
 
-.hero-container {
-
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 696px;
-
-}
-.hero-title {
-margin-bottom: 30px;
-  font-weight: 900;
-  color: var(--main-title-color);
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-text-transform: uppercase;
-
-}
 
 
 .button {
@@ -288,148 +525,10 @@ text-transform: uppercase;
 
 }
 
-.section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-
-}
-.container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-   
-}
-.work,
-.team {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-.work-list{
-    display: flex;
-        gap: 30px;
-     
-
-}
-.work-section {
-  padding-top: 0;
-}
-
-.work-thumb {
-  position: relative;
-  overflow: hidden;
-
-
-}
-.work-overlay{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-   
-padding-left: 0;
-padding-right: 0;
-    width: 100%;
-    height: 70px;
-    
-    display: flex;
-    align-items: center;
-    color: #ffffff;
-    
-      background-color: rgba(47, 48, 58, 0.8);
-      user-select: none;
-    
-
-}
-.work-overlay-text {
- 
-  font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-      text-align: center;
-      margin-left: auto;
-      margin-right: auto;
-   
-   
-}
-.solution-list {
-    margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-}
-
-.team-container{
-    display: flex;
-        gap: 30px;
-       
-
-}
-.name {
-    margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
-  text-align: center;
-  color: var(--main-text-color);
-}
-.profession {
-  padding-bottom: 16px;
-  font-size: 16px;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
-  text-align: center;
-  color: var(--secondary-text-color);
-}
-.solutions {
-    width: 270px;
-  color: var(--secondary-text-color);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-.team-section {
-  background-color: #f5f4fa;
-
-}
-.team-card {
-  background-color: var(--main-title-color);
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
- 
-}
-.card {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.socials{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
 .footer-socials {
-  margin-left: 70px;}
-
-.socials-link{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  fill: #AFB1B8;
-
-  transition: fill var(--anim-fast), background-color var(--anim-fast);
+  margin-left: 70px;
 }
+
 .footer-socials-link {
   display: flex;
     justify-content: center;
@@ -443,12 +542,7 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
     transition: fill var(--anim-fast), background-color var(--anim-fast);
     
 }
-.socials-link:hover,
-.socials-link:focus {
-  fill: #ffffff;
-  background-color: #2196f3;
 
-}
 .footer-socials-link:hover,
 .footer-socials-link:focus 
 { fill: #ffffff;
@@ -492,30 +586,8 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
     border-radius: 4px;
 }
 
-.clients{
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  gap: 30px;
 
-}
-.client-link{
-    display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 170px;
-      height: 92px;
-      border: 1px solid #AFB1B8;
-      border-radius: 4px ;
-      background-color: #ffffff;
-      fill: #AFB1B8;
-      transition: fill var(--anim-fast), border-color var(--anim-fast);
-}
-.client-link:hover,
-.client-link:focus{
-  fill: #2196f3;
-  border-color: #2196f3;
-}
+
 .client-header{
   margin-bottom: 50px;
   font-weight: 700;
