--- a/saas/components/_portfolio.scss
+++ b/saas/components/_portfolio.scss
@@ -1,3 +1,7 @@
+.portfolio {
+    @extend %section;
+}
+
 .portfolio__list__name {
     color: var(--main-text-color);
     font-weight: 700;
@@ -80,7 +84,7 @@
     transform: translateY(0)
 }
 
-.flex-btn-secondary {
+.portolio__flex__btn {
     display: flex;
     gap: 8px;
     justify-content: center;
