--- a/saas/components/_clients.scss
+++ b/saas/components/_clients.scss
@@ -6,33 +6,34 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  gap: 30px;
+  gap: 24px;
 }
 
 .client__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
+  width: 168px;
+  height: 88px;
+  border: 1px solid #8e8f99;
   border-radius: 4px;
   background-color: #ffffff;
-  fill: #afb1b8;
+  fill: #8e8f99;
   transition: fill var(--anim-fast), border-color var(--anim-fast);
 
   &:hover,
   &:focus {
-    fill: #2196f3;
-    border-color: #2196f3;
+    fill: #4d5ae5;
+    border-color: #4d5ae5;
   }
 }
 
 .client__header {
-  margin-bottom: 50px;
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.1;
   text-align: center;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
