--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 :root {
   --main-title-color: #ffffff;
-  --main-text-color: #212121;
-  --secondary-text-color: #757575;
-  --accent-color: #2196f3;
+  --main-text-color: #2e2f42;
+  --secondary-text-color: #434455;
+  --accent-color: #4d5ae5;
   --anim-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -47,9 +47,9 @@ img {
 }
 
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 1440px;
+  padding-left: 156px;
+  padding-right: 156px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -58,53 +58,32 @@ img {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  min-width: 216px;
-  min-height: 50px;
-  padding: 9px 31px;
+  min-width: 169px;
+  min-height: 56px;
+  padding: 16px, 32px;
   color: var(--main-title-color);
   background-color: var(--accent-color);
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  text-align: center;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-.portfolio__btn {
-  display: inline-block;
-  min-height: 38px;
-  padding: 5px 21px;
-  color: var(--main-text-color);
-  background-color: #f5f4fa;
-  font-family: inherit;
+  font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
-  text-align: center;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border: none;
   cursor: pointer;
-  border-radius: 4px;
-  -webkit-transition: color var(--anim-fast), background-color var(--anim-fast), -webkit-box-shadow var(--anim-fast);
-  transition: color var(--anim-fast), background-color var(--anim-fast), -webkit-box-shadow var(--anim-fast);
-  transition: color var(--anim-fast), background-color var(--anim-fast), box-shadow var(--anim-fast);
-  transition: color var(--anim-fast), background-color var(--anim-fast), box-shadow var(--anim-fast), -webkit-box-shadow var(--anim-fast);
-}
-.portfolio__btn:focus, .portfolio__btn:hover {
-  color: #ffffff;
-  background-color: var(--accent-color);
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 
 .portfolio, .client, .team, .work, .solution {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .header {
@@ -157,11 +136,11 @@ img {
 }
 
 .logo {
-  color: #2196f3;
+  color: var(--accent-color);
   font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
   letter-spacing: 0.03em;
   text-decoration: none;
 }
@@ -177,12 +156,12 @@ img {
 .nav__list .link {
   position: relative;
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 24px;
+  padding-bottom: 28px;
   color: var(--main-text-color);
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
   -webkit-transition: color var(--anim-fast);
@@ -242,15 +221,15 @@ img {
 }
 
 .hero {
-  background-color: #2f303a;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
+  background-color: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
+  max-width: 1440px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.25)), to(rgba(0, 0, 0, 0.25))), url(../images/hero.jpg);
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(../images/hero.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url(/images/hero.jpg);
+  background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -265,12 +244,11 @@ img {
 
 .hero__title {
   margin-bottom: 30px;
-  font-weight: 900;
+  font-weight: 700;
   color: var(--main-title-color);
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
 }
 
 .solution__container {
@@ -288,23 +266,23 @@ img {
   background-position: center;
   background-color: #f5f4fa;
   border-radius: 4px;
-  margin-bottom: 30px;
+  margin-bottom: 8px;
 }
 
 .solution__list {
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .solution__text {
-  width: 270px;
+  width: 264px;
   color: var(--secondary-text-color);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .icon-antena::before {
@@ -368,12 +346,13 @@ img {
 }
 
 .work__title {
-  margin-bottom: 50px;
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.1;
   text-align: center;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 
 .work {
@@ -385,19 +364,20 @@ img {
 }
 
 .team__title {
-  margin-bottom: 50px;
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.1;
   text-align: center;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 
 .team__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
+  gap: 24px;
 }
 
 .team__card {
@@ -408,27 +388,27 @@ img {
 }
 
 .team__name {
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
   text-align: center;
-  color: var(--main-text-color);
+  color: var(--secondary-text-color);
 }
 
 .team__position {
-  padding-bottom: 16px;
+  padding-bottom: 8px;
   font-size: 16px;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   text-align: center;
   color: var(--secondary-text-color);
 }
 
 .team__wrapper {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .client__wrapper {
@@ -439,7 +419,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 30px;
+  gap: 24px;
 }
 
 .client__link {
@@ -452,55 +432,43 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
+  width: 168px;
+  height: 88px;
+  border: 1px solid #8e8f99;
   border-radius: 4px;
   background-color: #ffffff;
-  fill: #afb1b8;
+  fill: #8e8f99;
   -webkit-transition: fill var(--anim-fast), border-color var(--anim-fast);
   transition: fill var(--anim-fast), border-color var(--anim-fast);
 }
 .client__link:hover, .client__link:focus {
-  fill: #2196f3;
-  border-color: #2196f3;
+  fill: #4d5ae5;
+  border-color: #4d5ae5;
 }
 
 .client__header {
-  margin-bottom: 50px;
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.1;
   text-align: center;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .footer {
-  background-color: #2f303a;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-.footer__tel,
-.footer__mail {
-  color: rgba(255, 255, 255, 0.6);
+.footer__text {
+  margin-top: 16px;
+  width: 264px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  -webkit-transition: color var(--anim-fast);
-  transition: color var(--anim-fast);
-}
-.footer__tel:focus, .footer__tel:hover,
-.footer__mail:focus,
-.footer__mail:hover {
-  color: var(--accent-color);
-}
-
-.footer__address {
-  display: block;
-  margin-bottom: 9px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #e7e9fc;
 }
 
 .footer__container {
@@ -510,37 +478,57 @@ img {
   vertical-align: baseline;
 }
 
-.address {
-  display: inline-block;
-  margin-top: 20px;
-  color: #ffffff;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-}
-
 .footer__button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  min-width: 165px;
+  min-height: 40px;
+  padding: 8px, 24px;
+  color: var(--main-title-color);
+  background-color: var(--accent-color);
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-width: 200px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: none;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 .footer__button:after {
   content: "";
   width: 24px;
-  height: 24px;
-  margin-left: 10px;
+  height: 20px;
+  margin-left: 16px;
   background-image: url(../images/icon-send.svg);
   background-size: contain;
+  background-repeat: no-repeat;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 .footer__socials {
-  margin-left: 70px;
+  margin-left: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 16px;
 }
 
 .footer__socials__link {
@@ -553,8 +541,8 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 44px;
-  height: 44px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
   fill: #ffffff;
@@ -568,30 +556,30 @@ img {
 
 .footer__socials__header {
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 16px;
+  line-height: 1.5;
   text-align: center;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
   color: #ffffff;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .footer__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 12px;
+  gap: 24px;
 }
 
 .footer__form__box {
-  margin-left: 93px;
+  margin-left: 80px;
 }
 
 .footer__form__field {
-  width: 358px;
-  height: 50px;
-  padding: 10px;
-  color: #ffffff;
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  color: rgba(255, 255, 255, 0.6);
   outline: unset;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -620,11 +608,11 @@ img {
 
 .foooter__form__header {
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #ffffff;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .socials {
@@ -637,7 +625,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 10px;
+  gap: 24px;
 }
 
 .socials__link {
@@ -650,34 +638,30 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 44px;
-  height: 44px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  background-color: #ffffff;
-  fill: #AFB1B8;
+  background-color: #4d5ae5;
+  fill: #ffffff;
   -webkit-transition: fill var(--anim-fast), background-color var(--anim-fast);
   transition: fill var(--anim-fast), background-color var(--anim-fast);
-}
-.socials__link:hover, .socials__link:focus {
-  fill: #ffffff;
-  background-color: #2196f3;
 }
 
 .portfolio__list__name {
   color: var(--main-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .portfolio__tipe {
-  margin-top: 4px;
+  margin-top: 8px;
   color: var(--secondary-text-color);
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .portfolio__list {
@@ -689,9 +673,9 @@ img {
 }
 
 .portfolio__item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  width: 360px;
+  margin-right: 24px;
+  margin-bottom: 48px;
   -webkit-transition: -webkit-box-shadow var(--anim-fast);
   transition: -webkit-box-shadow var(--anim-fast);
   transition: box-shadow var(--anim-fast);
@@ -730,7 +714,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   color: #ffffff;
-  background-color: rgba(33, 150, 243, 0.9);
+  background-color: #4d5ae5;
   -webkit-backdrop-filter: blur(3px);
           backdrop-filter: blur(3px);
   -webkit-user-select: none;
@@ -759,16 +743,44 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 8px;
+  gap: 24px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 72px;
+}
+
+.portfolio__btn {
+  display: inline-block;
+  min-height: 38px;
+  padding: 5px 21px;
+  color: #4d5ae5;
+  background-color: #f4f4fd;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  -webkit-transition: color var(--anim-fast), background-color var(--anim-fast), -webkit-box-shadow var(--anim-fast);
+  transition: color var(--anim-fast), background-color var(--anim-fast), -webkit-box-shadow var(--anim-fast);
+  transition: color var(--anim-fast), background-color var(--anim-fast), box-shadow var(--anim-fast);
+  transition: color var(--anim-fast), background-color var(--anim-fast), box-shadow var(--anim-fast), -webkit-box-shadow var(--anim-fast);
+}
+.portfolio__btn:focus, .portfolio__btn:hover {
+  color: #ffffff;
+  background-color: var(--accent-color);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .item {
-  padding: 20px 24px;
-  border: 1px solid #EEEEEE;
+  padding: 32px 16px;
+  border: 1px solid #eeeeee;
 }
 
 .backdrop {
@@ -794,9 +806,9 @@ img {
   left: 50%;
   -webkit-transform: translateX(-50%) translateY(-50%);
           transform: translateX(-50%) translateY(-50%);
-  width: 528px;
-  min-height: 581px;
-  padding: 40px;
+  width: 408px;
+  min-height: 584px;
+  padding: 24px;
   background-color: #ffffff;
   border-radius: 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -815,9 +827,8 @@ img {
 
 .modal-btn {
   position: absolute;
-  top: 8px;
-  right: 8px;
-  padding: 10;
+  top: 1px;
+  right: 1px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -826,34 +837,38 @@ img {
           align-items: center;
   background-repeat: no-repeat;
   background-position: center;
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
   background-color: transparent;
   border-radius: 50%;
+  background: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
+  margin: 24px;
 }
 
 .modal-label {
   display: block;
   text-align: center;
   margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-top: 48px;
 }
 
 .modal-form-label {
+  font-weight: 400;
   font-size: 12px;
   line-height: 1.14;
-  letter-spacing: 0.01em;
-  color: #757575;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 
 .modal-form-wraper {
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   margin-top: 4px;
 }
 
@@ -871,11 +886,11 @@ img {
   transition: outline var(--anim-fast);
 }
 .modal-form-field:focus {
-  outline-color: rgb(33, 150, 243);
+  outline-color: #4d5ae5;
 }
 
 .modal-form-field:focus + .modal-form-icon {
-  fill: rgb(33, 150, 243);
+  fill: #4d5ae5;
 }
 
 .modal-form-icon {
@@ -904,7 +919,7 @@ img {
   outline-offset: -1px;
   -webkit-transition: outline var(--anim-fast);
   transition: outline var(--anim-fast);
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: 1px solid #4d5ae5;
   border-radius: 4px;
 }
 .modal-form-message::-webkit-input-placeholder {
@@ -928,7 +943,7 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 .modal-form-message:focus {
-  outline-color: #2196f3;
+  outline-color: #4d5ae5;
 }
 
 .modal-form-agreement {
@@ -942,12 +957,12 @@ img {
       -ms-flex-align: center;
           align-items: center;
   gap: 9px;
-  margin-bottom: 30px;
+  margin-bottom: 24px;
 }
 
 .modal-form-agreement-desc {
-  font-size: 14px;
-  letter-spacing: 0.03em;
+  font-size: 12px;
+  letter-spacing: 0.04em;
   color: #757575;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -956,8 +971,8 @@ img {
 }
 
 .modal-form-agreement-link {
-  color: #2196f3;
-  text-underline-offset: 3px;
+  color: #4d5ae5;
+  text-underline-offset: 2px;
 }
 
 .modal-form-checkbox {
@@ -966,7 +981,7 @@ img {
           appearance: none;
   width: 16px;
   height: 15px;
-  border: 2px solid #212121;
+  border: 1px solid #212121;
   border-radius: 2px;
   background-position: center;
   background-repeat: no-repeat;
@@ -977,7 +992,7 @@ img {
 }
 .modal-form-checkbox:checked {
   border: 0;
-  background-color: #2196f3;
+  background-color: #4d5ae5;
   background-size: 11px 8px;
 }
 
@@ -989,7 +1004,7 @@ img {
 }
 
 .modal-icon:hover {
-  fill: #2196f3;
+  fill: #4d5ae5;
 }
 
 .icon-send {
