--- a/saas/components/_footer.scss
+++ b/saas/components/_footer.scss
@@ -1,139 +1,121 @@
 .footer {
-    background-color: #2f303a;
-    padding-top: 60px;
-    padding-bottom: 60px;
+  background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-.footer__tel,
-.footer__mail {
-    color: rgba(255, 255, 255, 0.6);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-
-    transition: color var(--anim-fast);
-
-    &:focus,
-    &:hover {
-            color: var(--accent-color);
-        }
-
-
-}
-
-.footer__address {
-    display: block;
-    margin-bottom: 9px;
+.footer__text {
+  margin-top: 16px;
+  width: 264px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #e7e9fc;
 }
 
 .footer__container {
-    display: flex;
-    vertical-align: baseline;
-
-}
-
-.address {
-    display: inline-block;
-    margin-top: 20px;
-    color: #ffffff;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-decoration: none;
+  display: flex;
+  vertical-align: baseline;
 }
 
 .footer__button {
+  display: inline-flex;
+  min-width: 165px;
+  min-height: 40px;
+  padding: 8px, 24px;
+  color: var(--main-title-color);
+  background-color: var(--accent-color);
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  &:after {
+    content: "";
+    width: 24px;
+    height: 20px;
+    margin-left: 16px;
+    background-image: url(../images/icon-send.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
     align-items: center;
-    min-width: 200px;
-
-    &:after {
-            content: "";
-            width: 24px;
-            height: 24px;
-            margin-left: 10px;
-            background-image: url(../images/icon-send.svg);
-            background-size: contain;
-            align-items: center;
-    
-        }
-
+  }
 }
 
 .footer__socials {
-    margin-left: 70px;
+  margin-left: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
 }
 
 .footer__socials__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-    ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: #ffffff;
+
+  transition: fill var(--anim-fast), background-color var(--anim-fast);
+
+  &:hover,
+  &:focus {
     fill: #ffffff;
-
-    transition: fill var(--anim-fast), background-color var(--anim-fast);
-
-   &:hover,
-   &:focus {
-            fill: #ffffff;
-            background-color: #2196f3;
-    
-        }
-
+    background-color: #2196f3;
+  }
 }
 
 .footer__socials__header {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #ffffff;
-    margin-bottom: 20px;
-
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
 }
 
 .footer__form {
-    display: flex;
-    gap: 12px;
+  display: flex;
+  gap: 24px;
 }
 
 .footer__form__box {
-    margin-left: 93px;
+  margin-left: 80px;
 }
 
 .footer__form__field {
-    width: 358px;
-    height: 50px;
-    padding: 10px;
-    color: #ffffff;
-    outline: unset;
-    background-color: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  color: rgba(255, 255, 255, 0.6);
+  outline: unset;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
 
-    &::placeholder {
-            font-size: 16px;
-            color: rgba(255, 255, 255, 0.6);
-    
-        }
+  &::placeholder {
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
 
-
 .foooter__form__header {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-
-    letter-spacing: 0.03em;
-    color: #ffffff;
-    margin-bottom: 20px;
-
-
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
 }
