--- a/saas/components/_hero.scss
+++ b/saas/components/_hero.scss
@@ -1,37 +1,35 @@
 .hero {
-    background-color: #2f303a;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    max-width: 1600px;
-    height: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    background-image: linear-gradient(to right,
-            rgba(0, 0, 0, 0.25),
-            rgba(0, 0, 0, 0.25)),
-        url(../images/hero.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  background-color: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
+  max-width: 1440px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
-    text-align: center;
+  text-align: center;
 }
 
 .hero__container {
-
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 696px;
-
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 696px;
 }
 
 .hero__title {
-    margin-bottom: 30px;
-    font-weight: 900;
-    color: var(--main-title-color);
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-
+  margin-bottom: 30px;
+  font-weight: 700;
+  color: var(--main-title-color);
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
 }
