--- a/saas/components/_logo.scss
+++ b/saas/components/_logo.scss
@@ -1,18 +1,17 @@
 .logo {
-    color: #2196f3;
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-
+  color: var(--accent-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-decoration: none;
 }
 
 .logo__header {
-    color: #000000;
+  color: #000000;
 }
 
 .logo__footer {
-    color: #ffffff;
+  color: #ffffff;
 }
