--- a/saas/components/_socials.scss
+++ b/saas/components/_socials.scss
@@ -1,27 +1,25 @@
 .socials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
 }
 
 .socials__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: #ffffff;
-    fill: #AFB1B8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  fill: #ffffff;
 
-    transition: fill var(--anim-fast), background-color var(--anim-fast);
+  transition: fill var(--anim-fast), background-color var(--anim-fast);
 
-    &:hover,
-    &:focus {
-            fill: #ffffff;
-            background-color: #2196f3;
-    
-        }
+  //   &:hover,
+  //   &:focus {
+  //     fill: #ffffff;
+  //     background-color: #4d5ae5;
+  //   }
 }
-
