--- a/saas/components/_team.scss
+++ b/saas/components/_team.scss
@@ -1,51 +1,50 @@
 .team {
-    @extend %section;
-    background-color: #f5f4fa;
-
+  @extend %section;
+  background-color: #f5f4fa;
 }
 
 .team__title {
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    letter-spacing: 0.03em;
+  margin-bottom: 72px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 
 .team__container {
-    display: flex;
-    gap: 30px;
-
+  display: flex;
+  gap: 24px;
 }
 
 .team__card {
-    background-color: var(--main-title-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-
+  background-color: var(--main-title-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team__name {
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-    text-align: center;
-    color: var(--main-text-color);
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--secondary-text-color);
 }
 
 .team__position {
-    padding-bottom: 16px;
-    font-size: 16px;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-    text-align: center;
-    color: var(--secondary-text-color);
+  padding-bottom: 8px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--secondary-text-color);
 }
 
 .team__wrapper {
-    padding-top: 30px;
-    padding-bottom: 30px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
