--- a/saas/utils/_vars.scss
+++ b/saas/utils/_vars.scss
@@ -1,49 +1,44 @@
 :root {
-    --main-title-color: #ffffff;
-    --main-text-color: #212121;
-    --secondary-text-color: #757575;
-    --accent-color: #2196f3;
-    --anim-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --main-title-color: #ffffff;
+  --main-text-color: #2e2f42;
+  --secondary-text-color: #434455;
+  --accent-color: #4d5ae5;
+  --anim-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 html {
-    box-sizing: border-box;
-
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Roboto, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 h1,
 h2,
 h3,
 p {
-    margin: 0;
+  margin: 0;
 }
 
 .link {
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
