--- a/css/main.css
+++ b/css/main.css
@@ -305,7 +305,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
+  gap: 24px;
 }
 
 .work__thumb {
@@ -357,6 +357,12 @@ img {
 
 .work {
   padding-top: 0;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    display: block;
+  }
 }
 
 .team {
@@ -551,7 +557,7 @@ img {
 }
 .footer__socials__link:hover, .footer__socials__link:focus {
   fill: #ffffff;
-  background-color: #2196f3;
+  background-color: #4d5ae5;
 }
 
 .footer__socials__header {
