--- a/css/main.css
+++ b/css/main.css
@@ -399,7 +399,17 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 24px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 72px;
+}
+@media screen and (min-width: 768px) {
+  .team__container {
+    gap: 24px;
+  }
 }
 
 .team__card {
@@ -711,6 +721,7 @@ img {
 }
 
 .portfolio__item {
+  width: 396px;
   margin-bottom: 48px;
   -webkit-transition: -webkit-box-shadow var(--anim-fast);
   transition: -webkit-box-shadow var(--anim-fast);
@@ -723,14 +734,14 @@ img {
 }
 @media screen and (min-width: 768px) {
   .portfolio__item {
-    width: 45%;
+    width: 356px;
     margin-right: 24px;
     margin-bottom: 72px;
   }
 }
 @media screen and (min-width: 1440px) {
   .portfolio__item {
-    width: 30%;
+    width: 360px;
     margin-bottom: 48px;
   }
 }
@@ -792,20 +803,27 @@ img {
           transform: translateY(0);
 }
 
-.portolio__flex__btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 24px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 72px;
+@media screen and (min-width: 768px) {
+  .portolio__flex__btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 24px;
+    margin-bottom: 64px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .portolio__flex__btn {
+    margin-bottom: 72px;
+  }
 }
 
 .portfolio__btn {
   display: inline-block;
-  min-height: 38px;
+  min-height: 40px;
   padding: 5px 21px;
   color: #4d5ae5;
   background-color: #f4f4fd;
