--- a/saas/components/_container.scss
+++ b/saas/components/_container.scss
@@ -1,20 +1,15 @@
 .container {
+  max-width: 428px;
   padding-left: 16px;
   padding-right: 16px;
   margin-left: auto;
   margin-right: auto;
 
-  @media screen and (min-width: 428px) {
-    width: 428px;
-  }
-
   @media screen and (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
   }
 
   @media screen and (min-width: 1440px) {
-    width: 1440px;
-    padding-left: 156px;
-    padding-right: 156px;
+    max-width: 1440px;
   }
 }
