--- a/saas/components/_solution.scss
+++ b/saas/components/_solution.scss
@@ -3,8 +3,15 @@
 }
 
 .solution__container {
-  display: flex;
-  gap: 30px;
+  @media screen and (min-width: 768px) {
+    // display: flex;
+  }
+
+  @media screen and (min-width: 1440px) {
+    display: flex;
+    gap: 24px;
+    flex-wrap: nowrap;
+  }
 }
 
 .solution__item::before {
@@ -16,22 +23,38 @@
   background-color: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 8px;
+
+  @media screen and (max-width: 1439px) {
+    display: none;
+  }
 }
 
 .solution__list {
   margin-bottom: 8px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
   letter-spacing: 0.02em;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    text-align: left;
+  }
+
+  @media screen and (min-width: 1440px) {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
 }
 
 .solution__text {
-  width: 264px;
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 72px;
 }
 
 .icon-antena::before {
