--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ img {
 }
 
 .container {
+  min-width: 320px;
   max-width: 428px;
   padding-left: 16px;
   padding-right: 16px;
@@ -58,9 +59,9 @@ img {
     max-width: 768px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   .container {
-    max-width: 1440px;
+    max-width: 1200px;
   }
 }
 
@@ -189,7 +190,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   margin-left: 93px;
-  gap: 50px;
+  gap: 40px;
 }
 
 .nav__link::after {
@@ -265,12 +266,18 @@ img {
   }
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 768px) {
   .solution__container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     gap: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .solution__container {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
@@ -286,9 +293,15 @@ img {
   border-radius: 4px;
   margin-bottom: 8px;
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1199px) {
   .solution__item::before {
     display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .solution__item {
+    width: calc((100% - 24px) / 2);
   }
 }
 
@@ -305,7 +318,7 @@ img {
     text-align: left;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   .solution__list {
     font-weight: 500;
     font-size: 20px;
@@ -399,7 +412,7 @@ img {
   padding-top: 0;
   display: none;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   .work {
     display: block;
   }
@@ -528,8 +541,8 @@ img {
 
 .footer {
   background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .footer__text {
@@ -539,13 +552,18 @@ img {
   font-size: 16px;
   line-height: 24px;
   color: #e7e9fc;
+  margin-bottom: 72px;
 }
 
 .footer__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  vertical-align: baseline;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .footer__button {
@@ -588,7 +606,6 @@ img {
 }
 
 .footer__socials {
-  margin-left: 120px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -633,20 +650,38 @@ img {
   color: #ffffff;
   margin-bottom: 16px;
 }
+@media screen and (min-width: 768px) {
+  .footer__socials__header {
+    text-align: left;
+  }
+}
 
 .footer__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 24px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 16px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__form {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
-.footer__form__box {
-  margin-left: 80px;
+@media screen and (min-width: 1200px) {
+  .footer__form__box {
+    margin-left: 80px;
+  }
 }
 
 .footer__form__field {
-  width: 264px;
+  width: 100%;
   height: 40px;
   padding: 8px 16px;
   color: rgba(255, 255, 255, 0.6);
@@ -682,7 +717,29 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  margin-top: 72px;
   margin-bottom: 16px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .foooter__form__header {
+    text-align: left;
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__logo__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__logo__container {
+    gap: 120px;
+  }
 }
 
 .socials {
@@ -1014,7 +1071,7 @@ img {
   outline-offset: -1px;
   -webkit-transition: outline var(--anim-fast);
   transition: outline var(--anim-fast);
-  border: 1px solid #4d5ae5;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
 .modal-form-message::-webkit-input-placeholder {
