--- a/saas/components/_container.scss
+++ b/saas/components/_container.scss
@@ -1,4 +1,5 @@
 .container {
+  min-width: 320px;
   max-width: 428px;
   padding-left: 16px;
   padding-right: 16px;
@@ -9,7 +10,7 @@
     max-width: 768px;
   }
 
-  @media screen and (min-width: 1440px) {
-    max-width: 1440px;
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
   }
 }
