--- a/saas/components/_footer.scss
+++ b/saas/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .footer__text {
@@ -11,11 +11,13 @@
   font-size: 16px;
   line-height: 24px;
   color: #e7e9fc;
+  margin-bottom: 72px;
 }
 
 .footer__container {
   display: flex;
-  vertical-align: baseline;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .footer__button {
@@ -50,7 +52,6 @@
 }
 
 .footer__socials {
-  margin-left: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,19 +85,31 @@
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+
+  @media screen and (min-width: 768px) {
+    text-align: left;
+  }
 }
 
 .footer__form {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+  }
 }
 
 .footer__form__box {
-  margin-left: 80px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 80px;
+  }
 }
 
 .footer__form__field {
-  width: 264px;
+  width: 100%;
   height: 40px;
   padding: 8px 16px;
   color: rgba(255, 255, 255, 0.6);
@@ -117,5 +130,23 @@
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  margin-top: 72px;
   margin-bottom: 16px;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    text-align: left;
+    margin-top: 0;
+  }
+}
+
+.footer__logo__container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    gap: 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    gap: 120px;
+  }
 }
