--- a/saas/components/_modal.scss
+++ b/saas/components/_modal.scss
@@ -127,7 +127,7 @@
   outline: 1px solid transparent;
   outline-offset: -1px;
   transition: outline var(--anim-fast);
-  border: 1px solid #4d5ae5;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 
   &::placeholder {
