--- a/saas/main.scss
+++ b/saas/main.scss
@@ -15,10 +15,4 @@
 @import "./components/socials";
 @import "./components/portfolio";
 @import "./components/modal";
-
-
-
-
-
-
-
+@import "./components/menu";
