--- a/saas/components/_header.scss
+++ b/saas/components/_header.scss
@@ -1,41 +1,48 @@
 .header {
-    border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header__container {
-    display: flex;
-    align-items: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header__icon {
-    fill: currentColor;
+  fill: currentColor;
 }
 
 .header__contacts {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    justify-content: center;
+    margin-left: auto;
+  }
+
+  @media screen and (min-width: 1200px) {
     display: flex;
     gap: 50px;
     margin-left: auto;
-
+  }
 }
 
 .header__tel,
 .header__mail {
-    color: var(--secondary-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
+  color: var(--secondary-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #434455;
+  transition: color var(--anim-fast);
 
-    transition: color var(--anim-fast);
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    &:focus,
-    &:hover {
-      color: var(--accent-color);
-     }
+  &:focus,
+  &:hover {
+    color: var(--accent-color);
+  }
 }
-
